stylesheet.css
/* Mobile First Design */
/* Root colours */
:root {
  --black: #020202;
  --blue: #6b9ac4;
  --mint: #97d8c4;
  --purple: #782ab6;
  --pink: #cf30ac;
  --white: #fff;
}

/* CSS Reset */
html {
  box-sizing: border-box;
  font-size: 16px;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

body,
h1,
h2,
h3,
h4,
h5,
h6,
p,
ol,
ul {
  margin: 0;
  padding: 0;
  font-weight: normal;
  font-family: "Inder", sans-serif;
  color: var(--white);
}

ol,
ul {
  list-style: none;
}

img {
  max-width: 100%;
  height: auto;
}

a {
  text-decoration: none;
  color: var(--white);
}

body {
  width: auto;
  height: auto;
}

/* Header Styling with grid*/
header {
  display: grid;
  grid-template-areas:
    ". top ."
    ". mid ."
    "bottoml . bottomr";
  grid-template-columns: 0.5fr 1fr 0.5fr;
  grid-template-rows: 0.5fr 1fr 0.5fr;
  background-color: var(--black);
  height: 17vh;
  width: 100%;
  text-align: center;
  border-bottom: 2px solid #fff;
  justify-content: space-around;
  align-items: center;
}

#headingname {
  grid-area: mid;
}

#linkedin {
  grid-area: bottoml;
}

#github {
  grid-area: bottomr;
}

/* Nav hidden until navigate to pages  */
nav {
  /* background-color: var(--pink); */
  align-self: flex-start;
  /* display: none; */
}

/* Hamburger Nav */
.container {
  max-width: 1050px;
  width: 90%;
  margin: auto;
}

.navbar {
  width: 100%;
}

.nav-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 62px;
}

.navbar .menu-items {
  display: flex;
}

.navbar .nav-container li {
  list-style: none;
}

.navbar .nav-container a {
  text-decoration: none;
  color: --white;
  font-weight: 500;
  font-size: 1.2rem;
  padding: 0.7rem;
}

.navbar .nav-container a:hover {
  font-weight: bolder;
}

.nav-container {
  display: block;
  position: relative;
  height: 60px;
}

.nav-container .checkbox {
  position: absolute;
  display: block;
  height: 32px;
  width: 32px;
  top: 20px;
  left: 20px;
  z-index: 5;
  opacity: 0;
  cursor: pointer;
}

.nav-container .hamburger-lines {
  display: block;
  height: 26px;
  width: 32px;
  position: absolute;
  top: 17px;
  left: 20px;
  z-index: 2;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.nav-container .hamburger-lines .line {
  display: block;
  height: 4px;
  width: 100%;
  border-radius: 10px;
  background: var(--white);
}

.nav-container .hamburger-lines .line1 {
  transform-origin: 0% 0%;
  transition: transform 0.4s ease-in-out;
}

.nav-container .hamburger-lines .line2 {
  transition: transform 0.2s ease-in-out;
}

.nav-container .hamburger-lines .line3 {
  transform-origin: 0% 100%;
  transition: transform 0.4s ease-in-out;
}

.navbar .menu-items {
  padding-top: 120px;
  box-shadow: inset 0 2000px rgba(107, 154, 196, 0.8);
  height: 40vh;
  width: 50vw;
  transform: translate(-150%);
  display: flex;
  flex-direction: column;
  margin-left: -40px;
  padding-left: 50px;
  transition: transform 0.5s ease-in-out;
  text-align: center;
}

.navbar .menu-items li {
  margin-bottom: 1.2rem;
  font-size: 1.5rem;
  font-weight: 500;
}

.logo {
  position: absolute;
  top: 5px;
  right: 15px;
  font-size: 1.2rem;
  color: #0e2431;
}

.nav-container input[type="checkbox"]:checked ~ .menu-items {
  transform: translateX(0);
}

.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
  transform: rotate(45deg);
}

.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
  transform: scaleY(0);
}

.nav-container input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
  transform: rotate(-45deg);
}

.nav-container input[type="checkbox"]:checked ~ .logo {
  display: none;
}

/* End Hamburger Nav Styling */

/* Main Section with Flex */
main {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  background-color: var(--black);
  text-align: center;
  min-height: 78vh;
  width: 100vw;
}

/* Index Circles for Images */
.dot {
  background-color: #bbb;
  border-radius: 50%;
  display: inline-block;
}

#dot1 {
  height: 125px;
  width: 125px;
  background-image: url("./images/headshot_small.jpg");
  /* Resize the background image to cover the entire container */
  background-size: cover;
  background-position: center;
}

#dot2 {
  height: 200px;
  width: 200px;
  background-image: url("./images/lazy_greyhound_screenshot.jpg");
  /* Resize the background image to cover the entire container */
  background-size: cover;
  background-position: center;
}

#dot3 {
  height: 170px;
  width: 170px;
  background-image: url("./images/people_watching_screenshot.jpg");
  /* Resize the background image to cover the entire container */
  background-size: cover;
  background-position: center;
}

/* Pages Circles for background and image */

#circleimage {
  height: 190px;
  width: 190px;
  background-color: var(--blue);
  position: relative;
}

#circlebackground {
  height: 500px;
  width: 500px;
  background-color: #fff;
}

/* Contract Text for Pages */

/* .pagetextblack {
  color: var(--black);
} */

section {
  margin-bottom: 1rem;
}

footer {
  height: 6vh;
  background-color: var(--black);
  display: flex;
  justify-content: center;
  align-items: center;
}

/* Media Queries Go Here */

@media (min-width: 769px) {
  body {
    width: auto;
  }
  /* Repositioning the items in Header */

  header {
    display: grid;
    grid-template-areas:
      ". . top ."
      ". . mid ."
      "bottomll bottomlr . bottomr";
    grid-template-columns: 0.25fr 0.25fr 1fr 0.5fr;
    grid-template-rows: 0.5fr 1fr 0.5fr;
  }
  #linkedin {
    grid-area: bottomll;
  }

  #github {
    grid-area: bottomlr;
  }

  /*Undoing the Hamburger Menu  */
  nav {
    height: auto;
    width: 100vw;
    align-self: flex-end;
    text-align: end;
    /* align-self: flex-end; */
    width: 501px;
  }

  div .navbar {
    display: none;
    align-self: flex-end;
    text-align: end;
  }

  .navbar .menu-items {
    flex-direction: row;
    justify-content: flex-end;
    text-align: end;
    transform: none;
    height: 40px;
    transition: none;
    box-shadow: none;
    padding: 5px;
  }

  div .container .nav-container {
    display: none;
  }

  .nav-container .hamburger-lines {
    display: none;
  }

  .nav-container input.checkbox {
    display: none;
  }

  /* Main Section */
  main {
    width: 100vw;
  }
  /* Circles */
  #dot1 {
    height: 300px;
    width: 300px;
  }
  #dot2 {
    height: 450px;
  }
  #dot3 {
    height: 380px;
    width: 380px;
  }
}

